--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,12 @@ img {
   object-fit: cover;
 }
 
+video {
+  will-change: transform;
+  transform: translate3d(0, 0, 0);
+}
+
+
 @layer components {
   .menu {
     @apply relative font-main text-lg font-medium text-white cursor-pointer py-2 transition-all duration-500 ease-in-out;
